@startuml ATM Main Class Diagram

class Customer {
  - name: String
  - pin: String
  - cardNumber: String
  + authenticate(pin: String): boolean
  + selectAccount(): Account
}

class Account {
  - accountNumber: String
  - balance: double
  - type: String
  + checkBalance(): double
  + deposit(amount: double): void
  + withdraw(amount: double): boolean
  + transfer(amount: double, toAccount: Account): boolean
}

class ATM {
  - id: String
  - location: String
  - cashAvailable: double
  - status: String
  + authenticateCustomer(cardNumber: String, pin: String): boolean
  + dispenseCash(amount: double): void
  + acceptDeposit(amount: double): void
  + printReceipt(transaction: Transaction): void
}

class Bank {
  - name: String
  - accounts: List<Account>
  + validateTransaction(transaction: Transaction): boolean
  + updateAccount(account: Account): void
}

class Transaction {
  - id: String
  - type: String
  - amount: double
  - date: Date
  - account: Account
  + process(): boolean
}

Customer "1" -- "1..*" Account : has
Bank "1" -- "1..*" Account : manages
ATM "1" -- "1" Bank : belongs to
Transaction "1" -- "1" Account : belongs to
ATM ..> Transaction : creates

@enduml